--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,14 +1,32 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-size: 48px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.block {
+  width: 100%;
+  color: #ffffff;
+  background: #000000;
+}
+
+.blue {
+  background: #004f80;
+}
+
+.pink {
+  background: #b772a8;
+}
+
+.green {
+  background: #5a9868;
+}
+
+.inner {
+  padding: 45vh 20px;
+  max-width: 1800px;
+  margin: auto;
+  text-align: center;
 }
