--- a/example/src/index.css
+++ b/example/src/index.css
@@ -27,7 +27,7 @@ a {
 /* HEADER */
 header {
   padding: 32px;
-  margin-bottom: 60px;
+  margin-bottom: 200px;
 }
 
 nav {
@@ -89,8 +89,36 @@ main {
   padding: 45vh 0;
 }
 
-img {
+img,
+svg {
   max-width: 100%;
+}
+
+.intro-arrow {
+  margin-top: -40px;
+  text-align: center;
+}
+.intro-arrow svg {
+  margin-top: -40px;
+  width: 200px;
+  height: 200px;
+}
+
+pre,
+code {
+  font-family: monospace, monospace;
+}
+pre {
+  overflow: auto;
+  margin: 20px 0 0;
+}
+pre > code {
+  display: block;
+  word-wrap: normal;
+}
+
+code {
+  font-size: 16px;
 }
 
 /* FOOTER */
