--- a/example/src/index.css
+++ b/example/src/index.css
@@ -8,6 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #000000;
+  overflow-x: hidden;
 }
 
 a {
